--- a/Quang/web/web.html
+++ b/Quang/web/web.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="buttom-list">
-            <button type="button" onclick="displayContent('display1', 'A')" class="buttom" style="margin-left: 0px;" id="A">Căn hộ loại A</button>
+            <button type="button" onclick="displayContent('display1', 'A')" class="buttom" style="margin-left: 0px;  background-color: #0A3643;" id="A">Căn hộ loại A</button>
             <button type="button" onclick="displayContent('display2', 'B')" class="buttom" id="B">Căn hộ loại B</button>
             <button type="button" onclick="displayContent('display3', 'C')" class="buttom" id="C">Căn hộ loại C</button>
             <button type="button" onclick="displayContent('display4', 'D')" class="buttom" id="D">Căn hộ loại D</button>
