--- a/Quang/web/web.html
+++ b/Quang/web/web.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="buttom-list">
-            <button type="button" onclick="displayContent('display1', 'A')" class="buttom" style="margin-left: 0px;  background-color: #0A3643;" id="A">Căn hộ loại A</button>
+            <button type="button" onclick="displayContent('display1', 'A')" class="buttom" style="margin-left: 0px; background-color: #0A3643;" id="A">Căn hộ loại A</button>
             <button type="button" onclick="displayContent('display2', 'B')" class="buttom" id="B">Căn hộ loại B</button>
             <button type="button" onclick="displayContent('display3', 'C')" class="buttom" id="C">Căn hộ loại C</button>
             <button type="button" onclick="displayContent('display4', 'D')" class="buttom" id="D">Căn hộ loại D</button>
@@ -177,10 +177,10 @@
         </div>
 
         <div class="row khoitin1 display" id="display1" style="display: flex;">
-            <div class="tinanh1">
+            <div class="tinanh alter">
                 <img src="img/a11.jpg" alt="">
             </div>
-            <div class="tinchu1">
+            <div class="tinchu alter">
                 <div class="row gap_element" style="padding-top: 30px;"></div>
                 <p>
                     <strong>Diện tích căn hộ:</strong>
@@ -248,10 +248,10 @@
         </div>
 
         <div class="row khoitin1 display" id="display2">
-            <div class="tinanh1">
+            <div class="tinanh alter">
                 <img src="img/a12.jpg" alt="">
             </div>
-            <div class="tinchu1">
+            <div class="tinchu alter">
                 <div class="row gap_element" style="padding-top: 30px;"></div>
                 <p>
                     <strong>Diện tích căn hộ:</strong>
@@ -315,10 +315,10 @@
         </div>
 
         <div class="row khoitin1 display" id="display3">
-            <div class="tinanh1">
+            <div class="tinanh alter">
                 <img src="img/a13.jpg" alt="">
             </div>
-            <div class="tinchu1">
+            <div class="tinchu alter">
                 <div class="row gap_element" style="padding-top: 30px;"></div>
                 <p>
                     <strong>Diện tích căn hộ:</strong>
@@ -383,10 +383,10 @@
         </div>
 
         <div class="row khoitin1 display" id="display4">
-            <div class="tinanh1">
+            <div class="tinanh alter">
                 <img src="img/a14.jpg" alt="">
             </div>
-            <div class="tinchu1">
+            <div class="tinchu alter">
                 <div class="row gap_element" style="padding-top: 30px;"></div>
                 <p>
                     <strong>Diện tích căn hộ:</strong>
@@ -450,10 +450,10 @@
         </div>
 
         <div class="row khoitin1 display" id="display5">
-            <div class="tinanh1">
+            <div class="tinanh  alter">
                 <img src="img/a15.jpg" alt="">
             </div>
-            <div class="tinchu1">
+            <div class="tinchu  alter">
                 <div class="row gap_element" style="padding-top: 30px;"></div>
                 <p>
                     <strong>Diện tích căn hộ:</strong>
