--- a/BTL Web/index.html
+++ b/BTL Web/index.html
@@ -774,7 +774,7 @@
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu2">
-                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px;">500 TRIỆU</p></center>
+                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px; font-size: 40px;">500 TRIỆU</p></center>
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu3">
@@ -795,7 +795,7 @@
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu1">
-                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">1 TỶ</p></center>
+                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 40px;">1 TỶ</p></center>
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu3">
@@ -817,7 +817,7 @@
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu2">
-                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px;">600 TRIỆU</p></center>
+                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px; font-size: 40px;">600 TRIỆU</p></center>
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu3">
@@ -838,7 +838,7 @@
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu2">
-                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px;">800 TRIỆU</p></center>
+                        <center><p style="color: #FFFFFF; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;padding-top: 13px; font-size: 40px;">800 TRIỆU</p></center>
                     </div>
                     <div class="khoangtrang"></div>
                     <div class="khungchu3">
